--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,45 @@
-<!-- NG-ZORRO -->
+<div id="app">
+  <nz-layout class="layout">
+    <nz-header class="header">
+      <div class="wrap">
+        <div class="left">
+          <h1>Music</h1>
+          <ul nz-menu nzTheme="dark" nzMode="horizontal">
 
-<h1>WYY</h1>
+          </ul>
+        </div>
+        <div class="right">
+          <div class="member">
+            <div class="no-login" *ngIf="!user else logined">
+              <ul nz-menu nzTheme="dark" nzMode="horizontal">
+                <li nz-submenu>
+                  <div title>
+                    <span>登陆</span>
+                    <i nz-icon type="down" nzTheme="outline"></i>
+                  </div>
+                  <ul>
+                    <li nz-menu-item >
+                      <i nz-icon type="mobile" nzTheme="outline"></i>
+                      手机登陆
+                    </li>
+                    <li nz-menu-item >
+                      <i nz-icon type="user-add" nzTheme="outline"></i>
+                      注册
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
 
-<button nz-button nzType="primary">button</button>
+          </div>
+        </div>
+      </div>
+    </nz-header>
+    <nz-content class="content">
+      <router-outlet></router-outlet>
+    </nz-content>
+    <nz-footer class="footer">
+      Ant Design ©2019 Implement By Angular
+    </nz-footer>
+  </nz-layout>
+</div>
