--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,4 +9,57 @@
         </nz-carousel>
     </app-wy-carousel>
 
+
+    <div class="main">
+        <div class="wrap">
+            <div class="left">
+                <div class="sec">
+                    <div class="up">
+                        <div class="navs">
+                            <h2>
+                                <i></i>
+                                <a>热门推荐</a>
+                            </h2>
+                            <nav>
+                                <a  *ngFor="let item of hotTags">{{item.name}}</a>
+                            </nav>
+                        </div>
+                        <a>
+                            更多
+                            <i nz-icon type="arrow-right" theme="outline"></i>
+                        </a>
+                    </div>
+
+                    <div class="down">
+                        <div class="down-wrap">
+                            <app-single-sheet *ngFor="let item of songSheetList" 
+                            class="sheet-item" 
+                            [sheet]="item">
+                                
+                            </app-single-sheet>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="right">
+                <app-member-card></app-member-card>
+                <div class="settled-singer">
+                    <div class="tit"><b>入驻歌手</b></div>
+                    <div class="list">
+                        <div class="card" *ngFor="let item of singers">
+                            <div class="pic">
+                                <img [src]="item.picUrl" [alt]="item.name">
+                            </div>
+                            <div class="txt">
+                                <b class="ellipsis">{{item.name}}</b>
+                                <span>专辑数: {{item.albumSize}}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
